Feat: Add about us section content with carousel and images.

--- a/clinic/templates/base.html
+++ b/clinic/templates/base.html
@@ -64,11 +64,9 @@
     {% endblock %}
 
     <!-- Main Content -->
-    <main class="main-content flex-grow-1 py-5">
-        <div class="container">
+    <main class="main-content">
             {% block content %}
             {% endblock %}
-        </div>
     </main>
 
     <!-- Footer -->
