--- a/clinic/static/css/style.css
+++ b/clinic/static/css/style.css
@@ -151,10 +151,10 @@ h6 {
 }
 
 .about-us .carousel {
-    max-width: 100%; /* Ensures the carousel is responsive */
-    max-height: 200px; /* Set a consistent height */
-    overflow: hidden; /* Hides any parts of images that exceed the container */
-    margin: 0 auto; /* Centers the carousel */
+    max-width: 100%;
+    max-height: 200px;
+    overflow: hidden;
+    margin: 0 auto;
 }
 
 .about-us .carousel-inner img {
@@ -181,7 +181,6 @@ footer.bg-dark {
 
 footer h5 {
     color: #fff;
-    /* Footer headings now white */
 }
 
 footer a.text-light:hover,
