--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -11,6 +11,7 @@
     --dark-water-blue: #4A6D91;
 }
 
+
 /* General Styling */
 body {
     font-family: 'Merriweather', serif;
@@ -29,6 +30,7 @@ h6 {
     font-family: 'Montserrat', sans-serif;
     color: var(--deep-coral-red);
 }
+
 
 /* Hero Section Styling */
 .hero {
@@ -56,6 +58,7 @@ h6 {
     font-size: 1.25rem;
     line-height: 1.5;
 }
+
 
 /* Button Styling */
 .loginbtn {
@@ -88,6 +91,7 @@ h6 {
     background-color: var(--soft-peach);
 }
 
+
 /* Navbar Styling */
 .navbar-dark .navbar-toggler-icon {
     filter: brightness(200%);
@@ -113,6 +117,61 @@ h6 {
     background-color: rgba(74, 109, 145, 0.95) !important;
 }
 
+
+/* About Us Section */
+.about-us {
+    background-color: #E8F3FA;
+    color: #333;
+    padding: 2rem 0;
+}
+
+.about-us h2 {
+    color: var(--dark-water-blue);
+    font-size: 2rem;
+}
+
+.about-us h3 {
+    color: var(--dark-water-blue);
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.about-us p {
+    font-size: 1rem;
+    line-height: 1.6;
+}
+
+.about-us ul {
+    padding-left: 0;
+}
+
+.about-us li {
+    font-size: 1rem;
+    line-height: 1.6;
+}
+
+.about-us .carousel {
+    max-width: 100%;
+    max-height: 200px;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+.about-us .carousel-inner img {
+    border-radius: 10px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.about-us .carousel-inner img:hover {
+    transform: scale(0.90);
+    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+}
+
+
 /* Footer Styling */
 footer.bg-dark {
     background-color: rgba(74, 109, 145, 0.9) !important;
@@ -122,7 +181,6 @@ footer.bg-dark {
 
 footer h5 {
     color: #fff;
-    /* Footer headings now white */
 }
 
 footer a.text-light:hover,
