--- a/clinic/templates/base.html
+++ b/clinic/templates/base.html
@@ -50,7 +50,7 @@
                         </li>
                     </ul>
                     <div class="d-flex flex-column justify-content-center align-items-center gap-3">
-                        <a href="#login" class="loginbtn text-white text-decoration-none px-3 py-1 rounded-4">
+                        <a href="{% url 'account_login' %}" class="loginbtn text-white text-decoration-none px-3 py-1 rounded-4">
                             Login
                         </a>
                     </div>
@@ -61,6 +61,10 @@
 
     <!-- Hero Section -->
     {% block hero %}
+    {% endblock %}
+ 
+    <!--Login section-->
+    {% block login %}
     {% endblock %}
 
     <!-- Main Content -->
